--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body{ 
+    position: relative;
     background-color: #F3C178;
 
     font-family: Arial, Helvetica, sans-serif;
@@ -6,26 +7,32 @@ body{
 
 .center {
     display: block;
-    margin: auto;
-    margin-top: 100px;
-
+    margin: 100px auto auto auto;
     width: 75%;
     max-width: 750px;
 }
+.profile {
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
+    margin-left: calc(50% - 100px);
 
-.name {
-    margin: 30px;
+    z-index: -5;
 }
 
-.icons {
-    margin-top: 50px;
+.name {
+    margin: 30px 30px 30px 30px;
+}
 
+
+.icons {
     max-height: 200px;
     display: flex;
 }
 
 .icon {
     flex: 1;
+    text-decoration: none;
 }
 
 .icon > img {
@@ -33,6 +40,7 @@ body{
     height: 100px;
     display: block;
     margin: auto;
+
 }
 
 .icon:hover  {
@@ -45,7 +53,7 @@ body{
     font-weight: bold;
     font-size: large;
     text-decoration: none;
-
+    
     margin: 0 ;
     padding-top: 5px;
 }
