--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
+html {
+    height: 100%;
+}
+
 body{ 
     position: relative;
-    background-color: #F3C178;
-
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+
+    background-image: url("./assets/bg.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: bottom center;
 }
 
 .center {
     display: block;
-    margin: 100px auto auto auto;
+    margin: 50px auto auto auto;
     width: 75%;
     max-width: 750px;
 }
@@ -16,6 +24,7 @@ body{
     width: 200px;
     height: 200px;
     margin-left: calc(50% - 100px);
+    border: solid #503D3F 10px;
 
     z-index: -5;
 }
@@ -28,6 +37,7 @@ body{
 .icons {
     max-height: 200px;
     display: flex;
+    gap: 15px;
 }
 
 .icon {
@@ -37,10 +47,8 @@ body{
 
 .icon > img {
     color: transparent;
-    height: 100px;
     display: block;
     margin: auto;
-
 }
 
 .icon:hover  {
@@ -51,9 +59,60 @@ body{
     text-align: center;
     color: #191717;
     font-weight: bold;
-    font-size: large;
     text-decoration: none;
+    font-size: 20px;
     
     margin: 0 ;
     padding-top: 5px;
+}
+
+@media only screen and (min-width: 0px) and (max-width: 100px) { 
+    .icon > img {
+        height: 20px;
+    }    
+    .icon > p {
+        font-size: 15px;
+    }
+}@media only screen and (min-width: 100px) and (max-width: 200px) { 
+    .icon > img {
+        height: 35px;
+    }    
+    .icon > p {
+        font-size: 15px;
+    }
+}@media only screen and (min-width: 200px) and (max-width: 300px) { 
+    .icon > img {
+        height: 50px;
+    }    
+    .icon > p {
+        font-size: 15px;
+    }
+}@media only screen and (min-width: 300px) and (max-width: 400px) { 
+    .icon > img {
+        height: 65px;
+    }    
+    .icon > p {
+        font-size: 20px;
+    }
+}@media only screen and (min-width: 400px) and (max-width: 500px) { 
+    .icon > img {
+        height: 80px;
+    }    
+    .icon > p {
+        font-size: 20px;
+    }
+}@media only screen and (min-width: 500px) and (max-width: 900px) { 
+    .icon > img {
+        height: 100px;
+    }    
+    .icon > p {
+        font-size: 20px;
+    }
+}@media only screen and (min-width: 900px) { 
+    .icon > img {
+        height: 150px;
+    }    
+    .icon > p {
+        font-size: 30px;
+    }
 }
