Stable Main Page

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ html {
     height: 100%;
 }
 
+.nodisp {
+    display: none !important;
+}
+
 body{ 
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
@@ -18,8 +22,6 @@ body{
     margin: 50px auto auto auto;
     width: 75%;
     max-width: 750px;
-
-    display:none;
 }
 .profile {
     border-radius: 100%;
