--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,20 @@
-html {
-    height: 100%;
-}
+@import url(css/bubble.css);
+@import url(css/education.css);
+@import url(css/frame.css);
+
 
 .nodisp {
     display: none !important;
+}
+
+.blur {
+    scale: 105%;
+    filter: blur(10px);
+    transition: 0.3s;
+}
+
+html {
+    height: 100%;
 }
 
 body{ 
@@ -11,10 +22,18 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
 
+}
+.background {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
     background-image: url("./assets/bg.svg");
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: bottom center;
+    z-index: -1;
 }
 
 .center {
