--- a/css/frame.css
+++ b/css/frame.css
@@ -4,6 +4,9 @@
 
     width: calc(100vw - 40px);
 }
+.frame::-webkit-scrollbar {
+    background-color: transparent;
+}
 
 .frame-container > .frame {
     position: fixed;
@@ -17,6 +20,28 @@
     border-style: solid;
     border-width: 1px;
 }
+
+.frame-container > .profile {
+    border: solid #503D3F 1px;
+    border-radius: 100%;
+    width: 45px;
+    height: 45px;
+    background-image: url('../assets/img.png');
+    background-size: 100%;
+    background-position: 70;
+
+    position: fixed;
+    left: 20px;
+    top: 7px;
+}
+.frame-container > .name {
+    height: 50px;
+
+    position: fixed;
+    left: 80px;
+    top: 7px;
+}
+
 
 .frame-container > .close {
     width: 40px;
