--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url(css/header.css);
 @import url(css/bubble.css);
 @import url(css/education.css);
 @import url(css/frame.css);
@@ -37,6 +38,10 @@ body{
     max-width: 750px;
 }
 .main > .profile {
+    background-image: url(assets/headshot.png);
+    background-size: 100%;
+    background-position: center 25%;
+
     border-radius: 100%;
     width: 200px;
     height: 200px;
