--- a/css/header.css
+++ b/css/header.css
@@ -1,46 +1,51 @@
 .header {
+    z-index: 100;
 
     position: fixed;
     top: 0%;
     width: 100vw;
     height: 60px;
     padding: 5px;
+    margin: 0;
 
-    background-color: #FFEBE750;
+    background-image: linear-gradient(18deg, #FFEBE780 0%, #FFEBE740 100%);
     background-size: contain;
-
-
-    transition: 0.3s;
+    
+    display: flex;
 
 }
 .header.hidden {
     height: 0px;
+    padding: 0;
     overflow-y: hidden;
-    padding: 0%;
 
     transition: 0.3s;
 }
 
 .header > * { 
-    display: inline-block;
+    flex: 1;
+    background-repeat: no-repeat;
 }
 
 .header > .profile {
     background-image: url(../assets/headshot.svg);
-    background-position-x: center;
-    background-position-y: center;
+    background-position: 40% center;
     background-size: 120%;
     border-radius: 50%;
-    border: solid #503D3F 4px;
+    border: solid #503D3F 3px;
 
-    aspect-ratio: 1;
 
-    
-    height: calc(100% - 8px);
+    flex: 0 1;
+    aspect-ratio: 1/1;
+
 }
 .header > .name {
-    margin: 5px 5px 5px 15px;
-    object-fit: contain;
-
-    height: calc(100% - 8px);
+    padding: 5px 5px 0px 5px;
+}
+.header > .home {
+    background-image: url(../assets/icons/home.svg);
+    background-position: center;
+ 
+    flex: 0 1;
+    aspect-ratio: 1/1;
 }
